// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizer accepts a \`block\` type within inline objects 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": [],
          "name": null,
          "of": [
            {
              "codegen": {
                "required": false,
              },
              "description": null,
              "fields": [
                {
                  "codegen": {
                    "required": false,
                  },
                  "definition": {
                    "codegen": {
                      "required": false,
                    },
                    "description": null,
                    "hasValidation": false,
                    "hidden": false,
                    "list": null,
                    "name": "name",
                    "originalNode": {
                      "name": "name",
                      "type": "string",
                    },
                    "readOnly": false,
                    "title": "Name",
                    "type": "String",
                  },
                  "description": "",
                  "hasValidation": false,
                  "hidden": false,
                  "name": "name",
                  "readOnly": false,
                  "title": "Name",
                },
              ],
              "hasValidation": false,
              "hidden": false,
              "name": "inlineObject",
              "originalNode": {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
              "readOnly": false,
              "title": "Inline Object",
              "type": "Object",
            },
          ],
          "originalNode": {
            "of": [
              {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
            ],
            "type": "block",
          },
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "originalNode": {
        "name": "wysiwyg",
        "of": [
          {
            "of": [
              {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
            ],
            "type": "block",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": [],
          "name": null,
          "of": [
            {
              "codegen": {
                "required": false,
              },
              "description": null,
              "fields": [
                {
                  "codegen": {
                    "required": false,
                  },
                  "definition": {
                    "codegen": {
                      "required": false,
                    },
                    "description": null,
                    "hasValidation": false,
                    "hidden": false,
                    "list": null,
                    "name": "name",
                    "originalNode": {
                      "name": "name",
                      "type": "string",
                    },
                    "readOnly": false,
                    "title": "Name",
                    "type": "String",
                  },
                  "description": "",
                  "hasValidation": false,
                  "hidden": false,
                  "name": "name",
                  "readOnly": false,
                  "title": "Name",
                },
              ],
              "hasValidation": false,
              "hidden": false,
              "name": "inlineObject",
              "originalNode": {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
              "readOnly": false,
              "title": "Inline Object",
              "type": "Object",
            },
          ],
          "originalNode": {
            "of": [
              {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
            ],
            "type": "block",
          },
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "originalNode": {
        "name": "wysiwyg",
        "of": [
          {
            "of": [
              {
                "fields": [
                  {
                    "name": "name",
                    "type": "string",
                  },
                ],
                "name": "inlineObject",
                "type": "object",
              },
            ],
            "type": "block",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "wysiwyg",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": [],
          "name": null,
          "of": null,
          "originalNode": {
            "type": "block",
          },
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "originalNode": {
        "name": "wysiwyg",
        "of": [
          {
            "type": "block",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "Wysiwyg",
      "type": "Array",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a block type with nested of types 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "arrayTesting",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "markDefs": [],
          "name": null,
          "of": [
            {
              "codegen": {
                "required": false,
              },
              "description": null,
              "hasValidation": false,
              "hidden": false,
              "list": null,
              "name": null,
              "originalNode": {
                "type": "string",
              },
              "readOnly": false,
              "title": null,
              "type": "String",
            },
          ],
          "originalNode": {
            "of": [
              {
                "type": "string",
              },
            ],
            "type": "block",
          },
          "readOnly": false,
          "title": null,
          "type": "Block",
        },
      ],
      "originalNode": {
        "name": "arrayTesting",
        "of": [
          {
            "of": [
              {
                "type": "string",
              },
            ],
            "type": "block",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "Array Testing",
      "type": "Array",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a number or string with or without list options 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": [
        {
          "title": "A",
          "value": "a",
        },
        {
          "title": "B",
          "value": "b",
        },
        {
          "title": "C",
          "value": "c",
        },
      ],
      "name": "dropdown",
      "originalNode": {
        "name": "dropdown",
        "options": {
          "list": [
            {
              "title": "A",
              "value": "a",
            },
            {
              "title": "B",
              "value": "b",
            },
            {
              "title": "C",
              "value": "c",
            },
          ],
        },
        "type": "string",
      },
      "readOnly": false,
      "title": "Dropdown",
      "type": "String",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": [
        {
          "title": "E",
          "value": "e",
        },
        {
          "title": "F",
          "value": "f",
        },
        {
          "title": "G",
          "value": "g",
        },
      ],
      "name": "dropdownNoTitle",
      "originalNode": {
        "name": "dropdownNoTitle",
        "options": {
          "list": [
            "e",
            "f",
            "g",
          ],
        },
        "type": "string",
      },
      "readOnly": false,
      "title": "Dropdown No Title",
      "type": "String",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": [
        {
          "title": "1",
          "value": 1,
        },
        {
          "title": "2",
          "value": 2,
        },
        {
          "title": "3",
          "value": 3,
        },
      ],
      "name": "numberDropdown",
      "originalNode": {
        "name": "numberDropdown",
        "options": {
          "list": [
            1,
            2,
            3,
          ],
        },
        "type": "number",
      },
      "readOnly": false,
      "title": "Number Dropdown",
      "type": "Number",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "dropdownField",
            "originalNode": {
              "name": "dropdownField",
              "type": "dropdown",
            },
            "readOnly": false,
            "title": "Dropdown Field",
            "to": "dropdown",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "dropdownField",
          "readOnly": false,
          "title": "Dropdown Field",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "numberDropdownField",
            "originalNode": {
              "name": "numberDropdownField",
              "type": "numberDropdown",
            },
            "readOnly": false,
            "title": "Number Dropdown Field",
            "to": "numberDropdown",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "numberDropdownField",
          "readOnly": false,
          "title": "Number Dropdown Field",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "foo",
            "originalNode": {
              "name": "foo",
              "type": "string",
            },
            "readOnly": false,
            "title": "Foo",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "foo",
          "readOnly": false,
          "title": "Foo",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "bar",
            "originalNode": {
              "name": "bar",
              "type": "number",
            },
            "readOnly": false,
            "title": "Bar",
            "type": "Number",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "bar",
          "readOnly": false,
          "title": "Bar",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "someObject",
      "originalNode": {
        "fields": [
          {
            "name": "dropdownField",
            "type": "dropdown",
          },
          {
            "name": "numberDropdownField",
            "type": "numberDropdown",
          },
          {
            "name": "foo",
            "type": "string",
          },
          {
            "name": "bar",
            "type": "number",
          },
        ],
        "name": "someObject",
        "type": "object",
      },
      "readOnly": false,
      "title": "Some Object",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts a reference type 1`] = `
{
  "documents": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "title",
            "originalNode": {
              "name": "title",
              "type": "string",
            },
            "readOnly": false,
            "title": "Title",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "title",
          "readOnly": false,
          "title": "Title",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "originalNode": {
              "name": "actor",
              "to": [
                {
                  "type": "actor",
                },
              ],
              "type": "reference",
            },
            "readOnly": false,
            "title": "Actor",
            "to": [
              {
                "codegen": {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "name": null,
                "originalNode": {
                  "type": "actor",
                },
                "readOnly": false,
                "title": null,
                "to": "actor",
                "type": "RegistryReference",
              },
            ],
            "type": "Reference",
            "weak": false,
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "originalNode": {
        "fields": [
          {
            "name": "title",
            "type": "string",
          },
          {
            "name": "actor",
            "to": [
              {
                "type": "actor",
              },
            ],
            "type": "reference",
          },
        ],
        "name": "movie",
        "type": "document",
      },
      "readOnly": false,
      "title": "Movie",
      "type": "Document",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "originalNode": {
              "name": "name",
              "type": "string",
            },
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "originalNode": {
        "fields": [
          {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "actor",
        "type": "document",
      },
      "readOnly": false,
      "title": "Actor",
      "type": "Document",
    },
  ],
  "name": "default",
  "registeredTypes": [],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts an image and file type with or without fields 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": null,
      "hasValidation": false,
      "hidden": false,
      "name": "myImage",
      "originalNode": {
        "name": "myImage",
        "type": "image",
      },
      "readOnly": false,
      "title": "My Image",
      "type": "Image",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "description",
            "originalNode": {
              "name": "description",
              "type": "string",
            },
            "readOnly": false,
            "title": "Description",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "description",
          "readOnly": false,
          "title": "Description",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "myFile",
      "originalNode": {
        "fields": [
          {
            "name": "description",
            "type": "string",
          },
        ],
        "name": "myFile",
        "type": "file",
      },
      "readOnly": false,
      "title": "My File",
      "type": "File",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes a field with a nested object 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "fields": [
              {
                "codegen": {
                  "required": false,
                },
                "definition": {
                  "codegen": {
                    "required": false,
                  },
                  "description": null,
                  "hasValidation": false,
                  "hidden": false,
                  "list": null,
                  "name": "name",
                  "originalNode": {
                    "name": "name",
                    "type": "string",
                  },
                  "readOnly": false,
                  "title": "Name",
                  "type": "String",
                },
                "description": "",
                "hasValidation": false,
                "hidden": false,
                "name": "name",
                "readOnly": false,
                "title": "Name",
              },
            ],
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "originalNode": {
              "fields": [
                {
                  "name": "name",
                  "type": "string",
                },
              ],
              "name": "actor",
              "type": "object",
            },
            "readOnly": false,
            "title": "Actor",
            "type": "Object",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "originalNode": {
        "fields": [
          {
            "fields": [
              {
                "name": "name",
                "type": "string",
              },
            ],
            "name": "actor",
            "type": "object",
          },
        ],
        "name": "movie",
        "type": "object",
      },
      "readOnly": false,
      "title": "Movie",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes a field with a top-level reference 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "originalNode": {
              "name": "name",
              "type": "string",
            },
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "originalNode": {
        "fields": [
          {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "actor",
        "type": "object",
      },
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "actor",
            "originalNode": {
              "name": "actor",
              "type": "actor",
            },
            "readOnly": false,
            "title": "Actor",
            "to": "actor",
            "type": "RegistryReference",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actor",
          "readOnly": false,
          "title": "Actor",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "originalNode": {
        "fields": [
          {
            "name": "actor",
            "type": "actor",
          },
        ],
        "name": "movie",
        "type": "object",
      },
      "readOnly": false,
      "title": "Movie",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts and normalizes array types 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "myArray",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "list": null,
          "name": null,
          "originalNode": {
            "type": "string",
          },
          "readOnly": false,
          "title": null,
          "type": "String",
        },
      ],
      "originalNode": {
        "name": "myArray",
        "of": [
          {
            "type": "string",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "My Array",
      "type": "Array",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "inlineObjects",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "fields": [
            {
              "codegen": {
                "required": false,
              },
              "definition": {
                "codegen": {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "list": null,
                "name": "foo",
                "originalNode": {
                  "name": "foo",
                  "type": "string",
                },
                "readOnly": false,
                "title": "Foo",
                "type": "String",
              },
              "description": "",
              "hasValidation": false,
              "hidden": false,
              "name": "foo",
              "readOnly": false,
              "title": "Foo",
            },
          ],
          "hasValidation": false,
          "hidden": false,
          "name": null,
          "originalNode": {
            "fields": [
              {
                "name": "foo",
                "type": "string",
              },
            ],
            "type": "object",
          },
          "readOnly": false,
          "title": null,
          "type": "Object",
        },
      ],
      "originalNode": {
        "name": "inlineObjects",
        "of": [
          {
            "fields": [
              {
                "name": "foo",
                "type": "string",
              },
            ],
            "type": "object",
          },
        ],
        "type": "array",
      },
      "readOnly": false,
      "title": "Inline Objects",
      "type": "Array",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "list": null,
      "name": "topLevelType",
      "of": [
        {
          "codegen": {
            "required": false,
          },
          "description": null,
          "hasValidation": false,
          "hidden": false,
          "name": null,
          "originalNode": {
            "type": "actor",
          },
          "readOnly": false,
          "title": null,
          "to": "actor",
          "type": "RegistryReference",
        },
      ],
      "originalNode": {
        "name": "topLevelType",
        "of": {
          "type": "actor",
        },
        "type": "array",
      },
      "readOnly": false,
      "title": "Top Level Type",
      "type": "Array",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "originalNode": {
              "name": "name",
              "type": "string",
            },
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "originalNode": {
        "fields": [
          {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "actor",
        "type": "object",
      },
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer accepts basic primitives types 1`] = `
{
  "documents": [],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "hasValidation": false,
      "hidden": false,
      "name": "boolean",
      "originalNode": {
        "name": "boolean",
        "type": "boolean",
      },
      "readOnly": false,
      "title": "Boolean",
      "type": "Boolean",
    },
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "date",
            "originalNode": {
              "name": "date",
              "type": "date",
            },
            "readOnly": false,
            "title": "Date",
            "type": "Date",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "date",
          "readOnly": false,
          "title": "Date",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "datetime",
            "originalNode": {
              "name": "datetime",
              "type": "datetime",
            },
            "readOnly": false,
            "title": "Datetime",
            "type": "Datetime",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "datetime",
          "readOnly": false,
          "title": "Datetime",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "geopoint",
            "originalNode": {
              "name": "geopoint",
              "type": "geopoint",
            },
            "readOnly": false,
            "title": "Geopoint",
            "type": "Geopoint",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "geopoint",
          "readOnly": false,
          "title": "Geopoint",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "slug",
            "originalNode": {
              "name": "slug",
              "type": "slug",
            },
            "readOnly": false,
            "title": "Slug",
            "type": "Slug",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "slug",
          "readOnly": false,
          "title": "Slug",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "text",
            "originalNode": {
              "name": "text",
              "type": "text",
            },
            "readOnly": false,
            "title": "Text",
            "type": "Text",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "text",
          "readOnly": false,
          "title": "Text",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "name": "url",
            "originalNode": {
              "name": "url",
              "type": "url",
            },
            "readOnly": false,
            "title": "Url",
            "type": "Url",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "url",
          "readOnly": false,
          "title": "Url",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "myObject",
      "originalNode": {
        "fields": [
          {
            "name": "date",
            "type": "date",
          },
          {
            "name": "datetime",
            "type": "datetime",
          },
          {
            "name": "geopoint",
            "type": "geopoint",
          },
          {
            "name": "slug",
            "type": "slug",
          },
          {
            "name": "text",
            "type": "text",
          },
          {
            "name": "url",
            "type": "url",
          },
        ],
        "name": "myObject",
        "type": "object",
      },
      "readOnly": false,
      "title": "My Object",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;

exports[`normalizer takes in a sanity schema and returns a normalized representation 1`] = `
{
  "documents": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "title",
            "originalNode": {
              "name": "title",
              "type": "string",
            },
            "readOnly": false,
            "title": "Title",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "title",
          "readOnly": false,
          "title": "Title",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "yearReleased",
            "originalNode": {
              "name": "yearReleased",
              "type": "number",
            },
            "readOnly": false,
            "title": "Year Released",
            "type": "Number",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "yearReleased",
          "readOnly": false,
          "title": "Year Released",
        },
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "actors",
            "of": [
              {
                "codegen": {
                  "required": false,
                },
                "description": null,
                "hasValidation": false,
                "hidden": false,
                "name": null,
                "originalNode": {
                  "type": "actor",
                },
                "readOnly": false,
                "title": null,
                "to": "actor",
                "type": "RegistryReference",
              },
            ],
            "originalNode": {
              "name": "actors",
              "of": [
                {
                  "type": "actor",
                },
              ],
              "type": "array",
            },
            "readOnly": false,
            "title": "Actors",
            "type": "Array",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "actors",
          "readOnly": false,
          "title": "Actors",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "movie",
      "originalNode": {
        "fields": [
          {
            "name": "title",
            "type": "string",
          },
          {
            "name": "yearReleased",
            "type": "number",
          },
          {
            "name": "actors",
            "of": [
              {
                "type": "actor",
              },
            ],
            "type": "array",
          },
        ],
        "name": "movie",
        "title": "Movie",
        "type": "document",
      },
      "readOnly": false,
      "title": "Movie",
      "type": "Document",
    },
  ],
  "name": "default",
  "registeredTypes": [
    {
      "codegen": {
        "required": false,
      },
      "description": null,
      "fields": [
        {
          "codegen": {
            "required": false,
          },
          "definition": {
            "codegen": {
              "required": false,
            },
            "description": null,
            "hasValidation": false,
            "hidden": false,
            "list": null,
            "name": "name",
            "originalNode": {
              "name": "name",
              "type": "string",
            },
            "readOnly": false,
            "title": "Name",
            "type": "String",
          },
          "description": "",
          "hasValidation": false,
          "hidden": false,
          "name": "name",
          "readOnly": false,
          "title": "Name",
        },
      ],
      "hasValidation": false,
      "hidden": false,
      "name": "actor",
      "originalNode": {
        "fields": [
          {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "actor",
        "title": "Actor",
        "type": "object",
      },
      "readOnly": false,
      "title": "Actor",
      "type": "Object",
    },
  ],
  "type": "SchemaRoot",
}
`;
